--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "angular": "1.3.x",
     "angular-route": "1.3.x",
-    "requirejs": "2.1.x"
+    "requirejs": "2.1.x",
+    "lodash": "~3.6.0"
   }
 }
