--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "grunt-contrib-requirejs": "~0.4.4",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-newer": "~1.1.0",
+    "gulp": "^3.8.11",
     "jit-grunt": "^0.9.0",
     "time-grunt": "^1.0.0"
   },
