--- a/package.json
+++ b/package.json
@@ -2,18 +2,15 @@
   "author": "DS",
   "license": "MIT",
   "devDependencies": {
-    "grunt": "~0.4.5",
-    "grunt-contrib-clean": "~0.6.0",
-    "grunt-contrib-coffee": "~0.12.0",
-    "grunt-contrib-compass": "~1.0.1",
-    "grunt-contrib-copy": "~0.7.0",
-    "grunt-contrib-jade": "^0.14.1",
-    "grunt-contrib-requirejs": "~0.4.4",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-newer": "~1.1.0",
+    "babelify": "^6.1.2",
+    "browserify": "^10.2.3",
+    "coffee-reactify": "^3.0.0",
+    "del": "^1.2.0",
     "gulp": "^3.8.11",
-    "jit-grunt": "^0.9.0",
-    "time-grunt": "^1.0.0"
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.0.1",
+    "underscore": "^1.8.3",
+    "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {}
 }
