--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "underscore": "^1.8.3",
     "vinyl-source-stream": "^1.1.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "angular": "^1.4.0",
+    "angular-route": "^1.4.0",
+    "lodash": "^3.9.3"
+  }
 }
