--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.0.1",
     "underscore": "^1.8.3",
-    "vinyl-source-stream": "^1.1.0"
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.2.1"
   },
   "dependencies": {
     "angular": "^1.4.0",
