--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "browserify": "^10.2.3",
     "del": "^1.2.0",
     "gulp": "^3.8.11",
+    "gulp-compass": "^2.1.0",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.0.1",
     "underscore": "^1.8.3",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.2.1"
