--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "devDependencies": {
     "babelify": "^6.1.2",
     "browserify": "^10.2.3",
+    "connect-inject": "^0.3.2",
     "del": "^1.2.0",
+    "express": "^4.13.1",
     "gulp": "^3.8.11",
     "gulp-compass": "^2.1.0",
     "gulp-rename": "^1.2.2",
     "live-reload": "^1.1.0",
+    "morgan": "^1.6.1",
+    "run-sequence": "^1.1.1",
     "underscore": "^1.8.3",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.2.1"
