--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gulp-compass": "^2.1.0",
     "gulp-if": "^1.2.5",
     "gulp-imagemin": "^2.3.0",
+    "gulp-jade": "^1.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.2.0",
     "live-reload": "^1.1.0",
