--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-livereload": "^3.8.0",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.2.0",
+    "gulp-util": "^3.0.6",
     "live-reload": "^1.1.0",
     "morgan": "^1.6.1",
     "run-sequence": "^1.1.1",
@@ -31,6 +32,7 @@
   },
   "dependencies": {
     "angular": "^1.4.0",
+    "angular-mocks": "^1.4.5",
     "angular-ui-router": "^0.2.15",
     "gulp-ng-annotate": "^1.0.0",
     "lodash": "^3.9.3"
