--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp-jade": "^1.0.1",
     "gulp-karma": "^0.0.4",
     "gulp-livereload": "^3.8.0",
+    "gulp-protractor": "^1.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.6",
