--- a/package.json
+++ b/package.json
@@ -2,12 +2,16 @@
   "author": "DS",
   "license": "MIT",
   "devDependencies": {
+    "angular-mocks": "^1.4.5",
     "babelify": "^6.1.2",
     "browserify": "^10.2.3",
+    "browserify-shim": "^3.8.10",
     "connect-inject": "^0.3.2",
     "del": "^1.2.0",
     "express": "^4.13.1",
     "gulp": "^3.8.11",
+    "gulp-angular-protractor": "0.0.2",
+    "gulp-angular-templatecache": "^1.7.0",
     "gulp-changed": "^1.2.1",
     "gulp-compass": "^2.1.0",
     "gulp-if": "^1.2.5",
@@ -15,27 +19,46 @@
     "gulp-jade": "^1.0.1",
     "gulp-karma": "^0.0.4",
     "gulp-livereload": "^3.8.0",
-    "gulp-protractor": "^1.0.0",
+    "gulp-ng-annotate": "^1.0.0",
     "gulp-rename": "^1.2.2",
+    "gulp-template": "^3.0.0",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.6",
+    "karma": "^0.13.9",
+    "karma-browserify": "^4.3.0",
+    "karma-jasmine": "^0.1.5",
+    "karma-phantomjs-launcher": "0.2.1",
     "live-reload": "^1.1.0",
     "morgan": "^1.6.1",
     "run-sequence": "^1.1.1",
     "underscore": "^1.8.3",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.2.1",
-    "karma": "^0.13.9",
-    "karma-jasmine": "^0.1.5",
-    "karma-phantomjs-launcher": "0.2.1",
-    "karma-browserify": "^4.3.0"
+    "watchify": "^3.2.1"
   },
   "dependencies": {
     "angular": "^1.4.0",
-    "angular-mocks": "^1.4.5",
     "angular-ui-router": "^0.2.15",
-    "gulp-ng-annotate": "^1.0.0",
+    "jquery": "^2.1.4",
     "lodash": "^3.9.3"
+  },
+  "browser": {
+    "angular": "./node_modules/angular/angular.js",
+    "angular-mocks": "./node_modules/angular-mocks/angular-mocks.js"
+  },
+  "browserify": {
+    "transform": [
+      "browserify-shim"
+    ]
+  },
+  "browserify-shim": {
+    "angular": {
+      "depends": "jquery:jQuery",
+      "exports": "angular"
+    },
+    "angular-mocks": {
+      "depends": "angular",
+      "exports": "angular.mock"
+    }
   }
 }
