livereload path; restore ng-annotate; test tasks review

--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "gulp-if": "^1.2.5",
     "gulp-imagemin": "^2.3.0",
     "gulp-jade": "^1.0.1",
-    "gulp-karma": "^0.0.4",
+    "gulp-karma": "karma-runner/gulp-karma",
     "gulp-livereload": "^3.8.0",
+    "gulp-ng-annotate": "^1.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-template": "^3.0.0",
     "gulp-uglify": "^1.2.0",
@@ -29,6 +30,7 @@
     "karma-jasmine": "^0.1.5",
     "karma-phantomjs-launcher": "0.2.1",
     "live-reload": "^1.1.0",
+    "livereload-js": "^2.2.2",
     "morgan": "^1.6.1",
     "run-sequence": "^1.1.1",
     "underscore": "^1.8.3",
