--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-template": "^3.0.0",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.6",
+    "http-proxy-middleware": "^0.9.0",
     "karma": "^0.13.9",
     "karma-browserify": "^4.3.0",
     "karma-jasmine": "^0.1.5",
