--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-jade": "^1.0.1",
     "gulp-karma": "karma-runner/gulp-karma",
     "gulp-livereload": "^3.8.0",
+    "gulp-minify-css": "^1.2.1",
     "gulp-ng-annotate": "^1.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-template": "^3.0.0",
