--- a/package.json
+++ b/package.json
@@ -1,12 +1,37 @@
 {
-  "author": "DS",
+  "name": "frontend-skeleton",
+  "version": "0.1.0",
+  "description": "Yet another boilerplate created for using AngularJS in conjunction with Django.",
+  "author": "DjangoStars <info@djangostars.com>",
+  "contributors": [
+    {
+      "name": "Yaroslav Shulika",
+      "email": "legendar@gmail.com"
+    },
+    {
+      "name": "Alexander Vilko",
+      "email": "alexander.vilko@djangostars.com"
+    },
+    {
+      "name": "Denis Podlesniy",
+      "email": "denis.podlesniy@djangostars.com"
+    }
+  ],
+  "bugs": {
+    "url": "https://github.com/django-stars/frontend-skeleton/issues"
+  },
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/django-stars/frontend-skeleton.git"
+  },
   "devDependencies": {
     "angular-mocks": "^1.4.5",
     "babel-plugin-ng-annotate": "^0.1.1",
     "babelify": "^6.3.0",
     "browserify": "^10.2.3",
     "browserify-shim": "^3.8.10",
+    "compass-importer": "^0.1.3",
     "connect-inject": "^0.3.2",
     "del": "^1.2.0",
     "express": "^4.13.1",
@@ -14,7 +39,6 @@
     "gulp-angular-protractor": "0.0.2",
     "gulp-angular-templatecache": "^1.7.0",
     "gulp-changed": "^1.2.1",
-    "gulp-compass": "^2.1.0",
     "gulp-if": "^1.2.5",
     "gulp-imagemin": "^2.3.0",
     "gulp-jade": "^1.1.0",
@@ -23,6 +47,8 @@
     "gulp-minify-css": "^1.2.1",
     "gulp-ng-annotate": "^1.0.0",
     "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.1.1",
+    "gulp-sourcemaps": "1.6.0",
     "gulp-template": "^3.0.0",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.6",
