--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.6",
     "http-proxy-middleware": "^0.9.0",
+    "inquirer": "^0.11.1",
     "karma": "^0.13.9",
     "karma-browserify": "^4.3.0",
     "karma-jasmine": "^0.1.5",
