--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "gulp-minify-css": "^1.2.1",
     "gulp-ng-annotate": "^1.0.0",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.1.1",
+    "gulp-sass": "2.2.0",
+    "node-sass": "3.4.2",
     "gulp-sourcemaps": "1.6.0",
     "gulp-template": "^3.0.0",
     "gulp-uglify": "^1.2.0",
