--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
-  "name": "frontend-skeleton",
-  "version": "0.1.0",
-  "description": "Yet another boilerplate created for using AngularJS in conjunction with Django.",
+  "name": "generator-telega-frontend",
+  "version": "0.0.1",
+  "description": "Yeoman generator for AngularJS project",
+  "keywords": "yeoman-generator, angular, gulp, sass, es6, babel, jade, pug",
+  "license": "MIT",
   "author": "DjangoStars <info@djangostars.com>",
+  "main": "app/index.js",
+  "files": "app",
   "contributors": [
     {
       "name": "Yaroslav Shulika",
@@ -17,80 +21,8 @@
       "email": "denis.podlesniy@djangostars.com"
     }
   ],
-  "bugs": {
-    "url": "https://github.com/django-stars/frontend-skeleton/issues"
-  },
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/django-stars/frontend-skeleton.git"
-  },
-  "devDependencies": {
-    "angular-mocks": "^1.4.5",
-    "babel-plugin-ng-annotate": "^0.1.1",
-    "babelify": "^6.3.0",
-    "browserify": "^10.2.3",
-    "browserify-shim": "^3.8.10",
-    "compass-importer": "^0.1.3",
-    "connect-inject": "^0.3.2",
-    "del": "^1.2.0",
-    "express": "^4.13.1",
-    "gulp": "^3.9.0",
-    "gulp-angular-protractor": "0.0.2",
-    "gulp-angular-templatecache": "^1.7.0",
-    "gulp-changed": "^1.2.1",
-    "gulp-if": "^1.2.5",
-    "gulp-imagemin": "^2.3.0",
-    "gulp-jade": "^1.1.0",
-    "gulp-karma": "karma-runner/gulp-karma",
-    "gulp-livereload": "^3.8.0",
-    "gulp-minify-css": "^1.2.1",
-    "gulp-ng-annotate": "^1.0.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "2.2.0",
-    "node-sass": "3.4.2",
-    "gulp-sourcemaps": "1.6.0",
-    "gulp-template": "^3.0.0",
-    "gulp-uglify": "^1.2.0",
-    "gulp-util": "^3.0.6",
-    "http-proxy-middleware": "^0.9.0",
-    "karma": "^0.13.9",
-    "karma-browserify": "^4.3.0",
-    "karma-jasmine": "^0.1.5",
-    "karma-phantomjs-launcher": "0.2.1",
-    "live-reload": "^1.1.0",
-    "livereload-js": "^2.2.2",
-    "morgan": "^1.6.1",
-    "run-sequence": "^1.1.1",
-    "sprity": "1.0.8",
-    "underscore": "^1.8.3",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.2.1"
-  },
   "dependencies": {
-    "angular": "^1.4.0",
-    "angular-ui-router": "^0.2.15",
-    "jquery": "^2.1.4",
-    "lodash": "^3.9.3"
-  },
-  "browser": {
-    "angular": "./node_modules/angular/angular.js",
-    "angular-mocks": "./node_modules/angular-mocks/angular-mocks.js"
-  },
-  "browserify": {
-    "transform": [
-      "browserify-shim"
-    ]
-  },
-  "browserify-shim": {
-    "angular": {
-      "depends": "jquery:jQuery",
-      "exports": "angular"
-    },
-    "angular-mocks": {
-      "depends": "angular",
-      "exports": "angular.mock"
-    }
+    "yeoman-generator": "^0.23.3",
+    "yosay": "^1.1.1"
   }
 }
