--- a/package.json
+++ b/package.json
@@ -27,51 +27,53 @@
   },
   "devDependencies": {
     "angular-mocks": "^1.4.5",
-    "babel-plugin-ng-annotate": "^0.1.1",
-    "babelify": "^6.3.0",
-    "browserify": "^10.2.3",
+    "babel-plugin-ng-annotate": "~0.3.2",
+    "babel-plugin-syntax-decorators": "~6.8.0",
+    "babel-polyfill": "~6.9.1",
+    "babelify": "^7.3.0",
+    "browserify": "~13.0.1",
     "browserify-shim": "^3.8.10",
     "compass-importer": "^0.2.4",
-    "connect-inject": "^0.3.2",
+    "connect-inject": "~0.4.0",
     "del": "^2.2.0",
     "express": "^4.13.1",
     "gulp": "^3.9.0",
-    "gulp-angular-protractor": "0.0.2",
+    "gulp-angular-protractor": "~0.1.1",
     "gulp-angular-templatecache": "^1.7.0",
     "gulp-changed": "^1.2.1",
     "gulp-clean-css": "^2.0.8",
     "gulp-if": "^2.0.1",
     "gulp-imagemin": "^3.0.1",
-    "gulp-jade": "^1.1.0",
-    "gulp-karma": "karma-runner/gulp-karma",
     "gulp-livereload": "^3.8.0",
-    "gulp-ng-annotate": "^1.0.0",
+    "gulp-ng-annotate": "~2.0.0",
+    "gulp-pug": "~3.0.3",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.1",
     "gulp-sourcemaps": "1.6.0",
-    "gulp-template": "^3.0.0",
+    "gulp-template": "~4.0.0",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.6",
-    "http-proxy-middleware": "^0.9.0",
+    "http-proxy-middleware": "~0.15.2",
+    "jasmine-core": "2.4.1",
     "karma": "^0.13.9",
-    "karma-browserify": "^4.3.0",
-    "karma-jasmine": "^0.1.5",
-    "karma-phantomjs-launcher": "0.2.1",
+    "karma-browserify": "~5.0.5",
+    "karma-jasmine": "~1.0.2",
+    "karma-phantomjs-launcher": "~1.0.0",
     "live-reload": "^1.1.0",
     "livereload-js": "^2.2.2",
     "morgan": "^1.6.1",
+    "phantomjs-prebuilt": "~2.1.7",
     "run-sequence": "^1.1.1",
     "sprity": "1.0.8",
-    "underscore": "^1.8.3",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.2.1"
   },
   "dependencies": {
-    "angular": "^1.5.5",
-    "angular-ui-router": "^0.3.0",
-    "jquery": "^2.1.4",
-    "lodash": "^4.13.1"
+    "angular": "~1.5.5",
+    "angular-ui-router": "~0.3.0",
+    "jquery": "~2.2.4",
+    "lodash": "~4.13.1"
   },
   "browser": {
     "angular": "./node_modules/angular/angular.js",
