--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-plugin-ng-annotate": "~0.3.2",
     "babel-plugin-syntax-decorators": "~6.8.0",
     "babel-polyfill": "~6.9.1",
+    "babel-preset-es2015": "~6.9.0",
     "babelify": "^7.3.0",
     "browserify": "~13.0.1",
     "browserify-shim": "^3.8.10",
