--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
   },
   "devDependencies": {
     "angular-mocks": "^1.4.5",
+    "babel-preset-es2015": "^6.9.0",
     "babel-plugin-ng-annotate": "~0.3.2",
     "babel-plugin-syntax-decorators": "~6.8.0",
     "babel-polyfill": "~6.9.1",
-    "babel-preset-es2015": "~6.9.0",
     "babelify": "^7.3.0",
     "browserify": "~13.0.1",
     "browserify-shim": "^3.8.10",
@@ -73,12 +73,17 @@
   "dependencies": {
     "angular": "~1.5.5",
     "angular-ui-router": "~0.3.0",
+    "angular-animate": "^1.5.3",
+    "angular-sanitize": "^1.4.7",
     "jquery": "~2.2.4",
-    "lodash": "~4.13.1"
+    "lodash": "~4.13.1",
+    "ionic-npm": "^1.0.2"
   },
   "browser": {
     "angular": "./node_modules/angular/angular.js",
-    "angular-mocks": "./node_modules/angular-mocks/angular-mocks.js"
+    "angular-mocks": "./node_modules/angular-mocks/angular-mocks.js",
+    "ionic": "ionic-npm/js/ionic.js",
+    "ionic-angular": "ionic-npm/js/ionic-angular.js"
   },
   "browserify": {
     "transform": [
@@ -93,6 +98,25 @@
     "angular-mocks": {
       "depends": "angular",
       "exports": "angular.mock"
+    },
+    "ionic": {
+      "exports": "ionic"
+    },
+    "ionic-angular": {
+      "depends": "angular",
+      "exports": "angular.module('ionic')"
     }
-  }
+  },
+  "cordovaPlugins": [
+    "cordova-plugin-device",
+    "cordova-plugin-console",
+    "cordova-plugin-whitelist",
+    "cordova-plugin-splashscreen",
+    "cordova-plugin-statusbar",
+    "ionic-plugin-keyboard"
+  ],
+  "cordovaPlatforms": [
+    "android",
+    "ios"
+  ]
 }
