--- a/package.json
+++ b/package.json
@@ -72,12 +72,13 @@
   },
   "dependencies": {
     "angular": "~1.5.5",
-    "angular-ui-router": "~0.3.0",
     "angular-animate": "^1.5.3",
     "angular-sanitize": "^1.4.7",
+    "angular-ui-router": "~0.3.0",
+    "ionic-native": "^1.3.10",
+    "ionic-npm": "^1.0.2",
     "jquery": "~2.2.4",
-    "lodash": "~4.13.1",
-    "ionic-npm": "^1.0.2"
+    "lodash": "~4.13.1"
   },
   "browser": {
     "angular": "./node_modules/angular/angular.js",
