Changed contributors list

--- a/package.json
+++ b/package.json
@@ -9,12 +9,8 @@
       "email": "legendar@gmail.com"
     },
     {
-      "name": "Alexander Vilko",
-      "email": "alexander.vilko@djangostars.com"
-    },
-    {
-      "name": "Denis Podlesniy",
-      "email": "denis.podlesniy@djangostars.com"
+      "name": "Oleksii Onyshchenko",
+      "email": "asfalot1111@gmail.com"
     }
   ],
   "bugs": {
