--- a/package.json
+++ b/package.json
@@ -1,110 +1,38 @@
 {
-  "name": "frontend-skeleton",
-  "version": "0.1.0",
-  "description": "Yet another boilerplate created for using AngularJS in conjunction with Django.",
-  "author": "DjangoStars <info@djangostars.com>",
-  "contributors": [
-    {
-      "name": "Yaroslav Shulika",
-      "email": "yaroslav.shulika@djangostars.com"
-    },
-    {
-      "name": "Alexander Vilko",
-      "email": "alexander.vilko@djangostars.com"
-    },
-    {
-      "name": "Denis Podlesniy",
-      "email": "denis.podlesniy@djangostars.com"
-    },
-    {
-      "name": "Alona Nedelchenko",
-      "email": "alona.nedelchenko@djangostars.com"
-    },
-    {
-      "name": "Eugene Bespaly",
-      "email": "eugene.bespaly@djangostars.com"
-    },
-    {
-      "name": "Oleksiy Onishchenko",
-      "email": "oleksiy.onishchenko@djangostars.com"
-    }
-  ],
-  "bugs": {
-    "url": "https://github.com/django-stars/frontend-skeleton/issues"
-  },
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/django-stars/frontend-skeleton.git"
-  },
   "devDependencies": {
-    "angular-mocks": "^1.4.5",
-    "babel-plugin-ng-annotate": "~0.3.2",
-    "babel-plugin-syntax-decorators": "~6.8.0",
-    "babel-polyfill": "~6.9.1",
-    "babel-preset-es2015": "~6.9.0",
-    "babelify": "^7.3.0",
-    "browserify": "~13.0.1",
-    "browserify-shim": "^3.8.10",
-    "compass-importer": "^0.2.4",
-    "connect-inject": "~0.4.0",
-    "del": "^2.2.0",
-    "express": "^4.13.1",
-    "gulp": "^3.9.0",
-    "gulp-angular-protractor": "~0.1.1",
-    "gulp-angular-templatecache": "^1.7.0",
-    "gulp-changed": "^1.2.1",
-    "gulp-clean-css": "^2.0.8",
-    "gulp-if": "^2.0.1",
-    "gulp-imagemin": "^3.0.1",
-    "gulp-livereload": "^3.8.0",
-    "gulp-ng-annotate": "~2.0.0",
-    "gulp-pug": "~3.0.3",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.3.1",
-    "gulp-sourcemaps": "1.6.0",
-    "gulp-template": "~4.0.0",
-    "gulp-uglify": "^1.2.0",
-    "gulp-util": "^3.0.6",
-    "http-proxy-middleware": "~0.15.2",
-    "jasmine-core": "2.4.1",
-    "karma": "^0.13.9",
-    "karma-browserify": "~5.0.5",
-    "karma-jasmine": "~1.0.2",
-    "karma-phantomjs-launcher": "~1.0.0",
-    "live-reload": "^1.1.0",
-    "livereload-js": "^2.2.2",
-    "morgan": "^1.6.1",
-    "phantomjs-prebuilt": "~2.1.7",
-    "run-sequence": "^1.1.1",
+    "babel-core": "6.13.2",
+    "babel-loader": "6.2.4",
+    "babel-plugin-ng-annotate": "0.3.2",
+    "babel-plugin-syntax-decorators": "6.13.0",
+    "babel-polyfill": "6.13.0",
+    "babel-preset-es2015": "6.13.2",
+    "compass-importer": "0.4.1",
+    "copy-webpack-plugin": "3.0.1",
+    "css-loader": "0.23.1",
+    "extract-text-webpack-plugin": "1.0.1",
+    "file-loader": "0.9.0",
+    "html-webpack-plugin": "2.22.0",
+    "imports-loader": "0.6.5",
+    "node-sass": "3.8.0",
+    "pug": "2.0.0-beta6",
+    "pug-html-loader": "1.0.8",
+    "pug-loader": "2.3.0",
+    "raw-loader": "0.5.1",
+    "sass-loader": "4.0.0",
     "sprity": "1.0.8",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.2.1"
+    "style-loader": "0.13.1",
+    "webpack": "1.13.1",
+    "webpack-dev-server": "1.15.0",
+    "write-file-webpack-plugin": "3.1.8"
   },
   "dependencies": {
-    "angular": "~1.5.5",
-    "angular-ui-router": "~0.3.0",
-    "jquery": "~2.2.4",
-    "lodash": "~4.13.1"
+    "angular": "1.5.8",
+    "angular-ui-router": "0.3.1",
+    "jquery": "3.1.0",
+    "lodash": "4.15.0"
   },
-  "browser": {
-    "angular": "./node_modules/angular/angular.js",
-    "angular-mocks": "./node_modules/angular-mocks/angular-mocks.js"
-  },
-  "browserify": {
-    "transform": [
-      "browserify-shim"
-    ]
-  },
-  "browserify-shim": {
-    "angular": {
-      "depends": "jquery:jQuery",
-      "exports": "angular"
-    },
-    "angular-mocks": {
-      "depends": "angular",
-      "exports": "angular.mock"
-    }
+  "scripts": {
+    "start__": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --progress --colors",
+    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --progress --colors --inline"
   }
 }
