--- a/package.json
+++ b/package.json
@@ -9,17 +9,22 @@
     "compass-importer": "0.4.1",
     "copy-webpack-plugin": "3.0.1",
     "css-loader": "0.23.1",
+    "dotenv": "^2.0.0",
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.9.0",
     "html-webpack-plugin": "2.22.0",
     "imports-loader": "0.6.5",
+    "morgan": "^1.7.0",
+    "ng-annotate-loader": "^0.2.0",
     "node-sass": "3.8.0",
     "pug": "2.0.0-beta6",
     "pug-html-loader": "1.0.8",
     "pug-loader": "2.3.0",
     "raw-loader": "0.5.1",
+    "resolve-url-loader": "^1.6.1",
     "sass-loader": "4.0.0",
     "sprity": "1.0.8",
+    "sprity-lwip": "git+https://github.com/chadwatson/sprity-lwip.git#cbbe0f1",
     "style-loader": "0.13.1",
     "webpack": "1.13.1",
     "webpack-dev-server": "1.15.0",
