--- a/package.json
+++ b/package.json
@@ -33,11 +33,12 @@
     "autoprefixer": "^6.7.2",
     "babel-core": "6.13.2",
     "babel-loader": "6.2.4",
+    "babel-plugin-react-require": "^3.0.0",
     "babel-plugin-syntax-decorators": "6.13.0",
     "babel-polyfill": "6.13.0",
     "babel-preset-es2015": "6.13.2",
     "babel-preset-react": "^6.23.0",
-    "babel-preset-stage-0": "^6.16.0",
+    "babel-preset-stage-0": "^6.22.0",
     "compass-importer": "^0.4.1",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.1",
@@ -65,7 +66,18 @@
   },
   "dependencies": {
     "jquery": "~2.2.4",
-    "lodash": "~4.13.1"
+    "lodash": "~4.13.1",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-redux": "^5.0.3",
+    "react-router": "^3.0.2",
+    "react-router-redux": "^4.0.8",
+    "redux": "^3.6.0",
+    "redux-actions": "^1.2.2",
+    "redux-form": "^6.5.0",
+    "redux-logger": "^2.8.1",
+    "redux-observable": "^0.13.0",
+    "rxjs": "^5.2.0"
   },
   "scripts": {
     "start": "NODE_ENV=development node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --progress --colors --inline",
