--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "redux-form": "^6.5.0",
     "redux-logger": "^2.8.1",
     "redux-observable": "^0.13.0",
+    "redux-thunk": "^2.2.0",
     "rxjs": "^5.2.0"
   },
   "scripts": {
