--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ htmlcov
 
 # Pycharm
 .idea/*
+.idea
 
 # Provided default Pycharm Run/Debug Configurations should be tracked by git
 # In case of local modifications made by Pycharm, use update-index command
