--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.2.0",
   "description": "Yet another boilerplate created for using Angular/React in conjunction with Django.",
   "author": "DjangoStars <info@djangostars.com>",
+  "main": "electron-app.js",
   "contributors": [
     {
       "name": "Yaroslav Shulika",
@@ -65,6 +66,7 @@
     "write-file-webpack-plugin": "^3.4.2"
   },
   "dependencies": {
+    "electron": "^1.6.2",
     "jquery": "~2.2.4",
     "lodash": "~4.13.1",
     "react": "^15.4.2",
