Frontend part without API intergation

--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,15 @@ config/settings/secret_settings.py
 
 
 staticfiles/
+
+logs/*
+.DS_Store
+static
+static*
+.tmp
+.imagemin
+build/
+dist/
+.cache/
+
+.env/local
