update git ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -74,6 +74,8 @@ emdyn_back/media/
 # config secrets
 config/settings/secret_settings.py
 *.migrations
+*migrations
+
 .cache
 config/settings/secret_settings.json
 
