--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "babel-preset-es2015": "6.13.2",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.22.0",
+    "clean-webpack-plugin": "^0.1.16",
     "compass-importer": "^0.4.1",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.1",
