--- a/package.json
+++ b/package.json
@@ -51,8 +51,8 @@
     "html-webpack-plugin": "^2.28.0",
     "imports-loader": "^0.7.0",
     "jest": "^20.0.4",
-    "jest-enzyme": "^3.6.1",
     "jest-cli": "^20.0.4",
+    "jest-enzyme": "^3.6.1",
     "morgan": "^1.7.0",
     "node-sass": "^4.5.0",
     "postcss-loader": "^1.2.2",
@@ -73,6 +73,7 @@
     "electron": "^1.6.2"
   },
   "dependencies": {
+    "eslint-config-standard-react": "^5.0.0",
     "jquery": "~2.2.4",
     "lodash": "~4.13.1",
     "react": "^15.4.2",
