--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,6 @@
       "block": { "exceptions": ["*"], "markers": ["/"], "balanced": true }
     }],
     "space-before-function-paren": ["error", { "anonymous": "never", "named": "never", "asyncArrow": "always" }],
-    "react/react-in-jsx-scope": 0
+    "react/react-in-jsx-scope": "off"
   }
 }
