next-generation initial

--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,4 @@
 {
   "compact": false,
-  "presets": ["es2015", "stage-0", "react"],
-  "plugins": ["react-require"]
+  "presets": ["env", "stage-2", "react"],
 }
