--- a/.env.default
+++ b/.env.default
@@ -20,7 +20,7 @@ AUTH_HEADER=Authorization
 DEV_SERVER_PORT=3000
 
 # proxy paths for dev server ( note that API_URL will be added automatically to this array )
-#PROXY=["/static/","/media/"]
+PROXY=["/static/","/media/"]
 
 # third party?
 ENABLE_META=false
