--- a/package.json
+++ b/package.json
@@ -41,13 +41,17 @@
     "eslint-plugin-standard": "^3.0.1",
     "html-webpack-plugin": "^2.30.1",
     "postcss-inline-svg": "^3.0.0",
+    "reload-html-webpack-plugin": "^0.1.2",
     "snazzy": "^7.0.0",
     "standard-engine": "^7.2.0",
     "webpack": "^3.8.1",
     "webpack-blocks": "^1.0.0-rc.2",
-    "webpack-dev-server": "^2.9.4"
+    "webpack-dev-server": "^2.9.4",
+    "write-file-webpack-plugin": "^4.2.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "bootstrap": "4.0.0-beta.2"
+  },
   "scripts": {
     "start": "NODE_ENV=development webpack-dev-server --progress --colors",
     "build": "NODE_ENV=production webpack",
