--- a/.env.default
+++ b/.env.default
@@ -25,6 +25,12 @@ PROXY=["/static/","/media/"]
 # third party?
 ENABLE_META=false
 
+# key for store redux state in localStorage
+STORAGE_KEY=ds
+
+# what to store, set empty or null to store all state
+CACHE_STATE_KEYS=["session"]
+
 # TODO
 #DEV_SERVERT_HMR_PORT=35729
 #SUBDOMAINS + MAIN_HOST
