--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
+    "babel-plugin-react-require": "^3.0.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-export-extensions": "^6.22.0",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "clean-webpack-plugin": "^0.1.17",
     "dotenv": "^4.0.0",
@@ -50,6 +52,7 @@
     "write-file-webpack-plugin": "^4.2.0"
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.0.0",
     "lodash": "^4.17.5",
     "react": "^16.2.0",
@@ -57,9 +60,12 @@
     "react-hot-loader": "^4.0.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "react-router-redux": "^5.0.0-alpha.9",
     "redux": "^3.7.2",
     "redux-form": "^7.3.0",
     "redux-observable": "^0.18.0",
+    "reselect": "^3.0.1",
     "rxjs": "^5.5.7"
   },
   "scripts": {
