--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel-preset-stage-2": "^6.24.1",
     "clean-webpack-plugin": "^0.1.17",
     "dotenv": "^4.0.0",
+    "enzyme": "^3.3.0",
     "eslint": "^4.11.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-import": "^2.8.0",
@@ -42,6 +43,9 @@
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
     "html-webpack-plugin": "^2.30.1",
+    "jest": "^22.4.2",
+    "jest-cli": "^23.0.0-alpha.0",
+    "jest-enzyme": "^6.0.0",
     "postcss-inline-svg": "^3.0.0",
     "reload-html-webpack-plugin": "^0.1.2",
     "snazzy": "^7.0.0",
@@ -73,6 +77,6 @@
     "build": "NODE_ENV=production webpack",
     "lint": "node linter --verbose | snazzy",
     "lint:fix": "node linter --fix --verbose | snazzy",
-    "test": "exit 0"
+    "test": "jest --config jest.conf.json -u"
   }
 }
