--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -43,6 +43,7 @@
     "space-before-function-paren": ["error", { "anonymous": "never", "named": "never", "asyncArrow": "always" }],
     "no-multiple-empty-lines": ["error", { "max": 2, "maxEOF": 0, "maxBOF": 0 }],
     "no-unused-vars": ["error", {"args": "none"}],
+    "object-curly-spacing": ["error", "always"],
     "react/react-in-jsx-scope": "off",
     "react/prop-types": ["off"],
     "react/jsx-uses-vars": ["error"],
