--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,13 @@
 {
-  "compact": false,
-  "presets": ["env", "stage-2"],
-  "env": {
-    "test": {
-      "presets": [["env"], "react"]
+  'compact': false,
+  'presets': ['env', 'stage-2'],
+  'env': {
+    'test': {
+      'presets': [['env'], 'react'],
+      'plugins': [
+        'react-require',
+        'transform-decorators-legacy',
+      ],
     }
   }
 }
