--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "dotenv": "^4.0.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-to-json": "^3.3.3",
     "eslint": "^4.11.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-import": "^2.8.0",
@@ -51,6 +52,7 @@
     "jest-enzyme": "^6.0.0",
     "postcss-inline-svg": "^3.0.0",
     "react-test-renderer": "^16.2.0",
+    "redux-mock-store": "^1.5.1",
     "reload-html-webpack-plugin": "^0.1.2",
     "snazzy": "^7.0.0",
     "standard-engine": "^7.2.0",
