--- a/.env.default
+++ b/.env.default
@@ -29,7 +29,7 @@ ENABLE_META=false
 STORAGE_KEY=ds
 
 # what to store, set empty or null to store all state
-CACHE_STATE_KEYS=["session"]
+CACHE_STATE_KEYS=["resource.session"]
 
 # TODO
 #DEV_SERVERT_HMR_PORT=35729
