add possibility to remotely debug (DEV_SERVER_HOST)

--- a/.env.default
+++ b/.env.default
@@ -19,6 +19,9 @@ AUTH_HEADER=Authorization
 # port for dev server
 DEV_SERVER_PORT=3000
 
+# you can set 0.0.0.0 here
+DEV_SERVER_HOST=127.0.0.1
+
 # proxy paths for dev server ( note that API_URL will be added automatically to this array )
 PROXY=["/static/","/media/"]
 
