--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "clean-webpack-plugin": "^0.1.17",
-    "dotenv": "^4.0.0",
+    "dotenv": "^6.0.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.3",
@@ -65,6 +65,7 @@
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.0.0",
     "core-decorators": "^0.20.0",
+    "dotenv-expand": "^4.2.0",
     "lodash": "^4.17.5",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
