update contributors list

--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "contributors": [
     "Alexander Vilko <vilkoalexander@gmail.com> (https://github.com/vilkoalexander)",
     "Alyona Pysarenko (https://github.com/ned-alyona)",
+    "Artem Yarilchenko <a.yarilchenko@gmail.com> (https://github.com/yarilchenko)",
     "Denis Podlesniy <haos616@gmail.com> (https://github.com/haos616)",
     "Eugene Bespaly <e.bespaly@gmail.com> (https://github.com/kosmos342)",
+    "Illia Lucenko <adskiyprikol@gmail.com> (https://github.com/MrRinsvind)",
     "Oleksii Onyshchenko (https://github.com/Asfalot)",
+    "Tanya Sebastiyan <tanya.sebastiyan@gmail.com> (https://github.com/sebastiyan)",
     "Taras Dihtenko (https://github.com/h0m1c1de)",
     "Vyacheslav Binetsky <vyacheslav.binetsky@gmail.com> (https://github.com/38Slava)",
     "Yaroslav Shulika <legendar@gmail.com> (https://github.com/legendar)"
