--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "redux-form": "^7.3.0",
     "redux-observable": "^0.18.0",
     "reselect": "^3.0.1",
-    "rxjs": "^5.5.7"
+    "rxjs": "^5.5.7",
+    "smoothscroll-polyfill": "^0.4.3"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
