--- a/.env.default
+++ b/.env.default
@@ -24,6 +24,7 @@ OUTPUT_PATH=dist
 
 # pathname for assets used on client-side in CSS urls
 PUBLIC_PATH=/assets/
+PUBLIC_URL=${PUBLIC_PATH}
 
 # authorization header name for JWT token
 AUTH_HEADER=Authorization
