--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,27 @@
 {
   'compact': false,
-  'presets': ['env', 'stage-2'],
+  'presets': ['@babel/preset-env'],
+  'plugins': [
+    // stage 2
+    ['@babel/plugin-proposal-decorators', { 'legacy': true }],
+    // '@babel/plugin-proposal-function-sent',
+    '@babel/plugin-proposal-numeric-separator',
+    '@babel/plugin-proposal-throw-expressions',
+
+    // stage 3
+    '@babel/plugin-syntax-dynamic-import',
+    '@babel/plugin-syntax-import-meta',
+    ['@babel/plugin-proposal-class-properties', { 'loose': false }],
+    '@babel/plugin-proposal-json-strings',
+    '@babel/plugin-proposal-export-namespace-from',
+
+  ],
+
   'env': {
     'test': {
-      'presets': [['env'], 'react'],
+      'presets': ['@babel/preset-react', '@babel/preset-flow'],
       'plugins': [
-        'react-require',
-        'transform-decorators-legacy',
+        'babel-plugin-react-require',
       ],
     }
   }
