--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "Artem Yarilchenko <a.yarilchenko@gmail.com> (https://github.com/yarilchenko)",
     "Denis Podlesniy <haos616@gmail.com> (https://github.com/haos616)",
     "Eugene Bespaly <e.bespaly@gmail.com> (https://github.com/kosmos342)",
+    "Nikita Mazur <nikita.mazur.ua@gmail.com> (https://github.com/NikitaMazur)",
     "Illia Lucenko <adskiyprikol@gmail.com> (https://github.com/MrRinsvind)",
+    "Oksana Maslova <maslovaoksanaua@gmail.com> (https://github.com/Oksana-Maslova)",
     "Oleksii Onyshchenko (https://github.com/Asfalot)",
     "Tanya Sebastiyan <tanya.sebastiyan@gmail.com> (https://github.com/sebastiyan)",
     "Taras Dihtenko (https://github.com/h0m1c1de)",
@@ -47,41 +49,50 @@
     "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.2",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-react-require": "^3.0.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-export-extensions": "^6.22.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "clean-webpack-plugin": "^1.0.0",
+    "@babel/core": "^7.3.3",
+    "@babel/plugin-proposal-class-properties": "^7.3.4",
+    "@babel/plugin-proposal-decorators": "^7.3.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.2.0",
+    "@babel/plugin-proposal-function-sent": "^7.2.0",
+    "@babel/plugin-proposal-json-strings": "^7.2.0",
+    "@babel/plugin-proposal-numeric-separator": "^7.2.0",
+    "@babel/plugin-proposal-throw-expressions": "^7.2.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-syntax-import-meta": "^7.2.0",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-flow": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.0.0",
+    "autoprefixer": "^9.4.9",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.5",
+    "babel-plugin-react-require": "^3.1.1",
+    "clean-webpack-plugin": "^1.0.1",
     "dotenv": "^6.0.0",
     "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-adapter-react-16": "^1.10.0",
     "enzyme-to-json": "^3.3.3",
     "eslint": "^4.11.0",
-    "eslint-config-standard": "^10.2.1",
+    "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-react": "^7.7.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "html-webpack-plugin": "3.1.0",
-    "jest": "^22.4.2",
-    "jest-cli": "^23.0.0-alpha.0",
-    "jest-enzyme": "^6.0.0",
+    "eslint-plugin-standard": "^4.0.0",
+    "html-webpack-plugin": "^3.2.0",
+    "jest": "^24.1.0",
+    "jest-cli": "^24.1.0",
+    "jest-enzyme": "^7.0.1",
     "postcss-inline-svg": "^3.0.0",
-    "react-test-renderer": "^16.2.0",
+    "react-test-renderer": "^16.8.3",
     "redux-mock-store": "^1.5.1",
     "reload-html-webpack-plugin": "^0.1.2",
-    "snazzy": "^7.0.0",
-    "standard-engine": "^7.2.0",
-    "webpack": "4.23.1",
-    "webpack-blocks": "^2.0.0-alpha",
+    "snazzy": "^8.0.0",
+    "standard-engine": "^10.0.0",
+    "webpack": "^4.29.6",
+    "webpack-blocks": "^2.0.0-rc",
     "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "3.1.4",
-    "write-file-webpack-plugin": "^4.2.0"
+    "webpack-dev-server": "^3.2.1",
+    "write-file-webpack-plugin": "^4.5.0"
   }
 }
