--- a/.env.default
+++ b/.env.default
@@ -43,3 +43,10 @@ STORAGE_KEY=ds
 
 # what to store, set empty or null to store all state
 CACHE_STATE_KEYS=["resource.session"]
+
+#Sentry configs
+SENTRY_ORG=djangostars
+SENTRY_PROJECT=ds-app
+SENTRY_AUTH_TOKEN=
+SENTRY_DSN=
+SENTRY_ENVIRONMENT=dev
