--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend-skeleton",
-  "version": "3.0.0-beta",
+  "version": "4.0.0-beta",
   "description": "Yet another boilerplate created at first for using Angular/React in conjunction with Django.",
   "author": "DjangoStars <info@djangostars.com> (https://github.com/django-stars/)",
   "contributors": [
@@ -35,6 +35,7 @@
   "dependencies": {
     "@sentry/browser": "^5.6.1",
     "babel-polyfill": "^6.26.0",
+    "@sentry/browser": "^5.6.1",
     "bootstrap": "^4.0.0",
     "core-decorators": "^0.20.0",
     "lodash": "^4.17.5",
