--- a/package.json
+++ b/package.json
@@ -91,7 +91,9 @@
     "jest": "^24.1.0",
     "jest-cli": "^24.1.0",
     "jest-enzyme": "^7.0.1",
+    "postcss": "^7.0.17",
     "postcss-inline-svg": "^3.0.0",
+    "prettier": "^1.18.2",
     "react-test-renderer": "^16.8.3",
     "redux-mock-store": "^1.5.1",
     "reload-html-webpack-plugin": "^0.1.2",
