--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "build": "NODE_ENV=production webpack --mode production",
     "lint": "node linter --verbose | snazzy",
     "lint:fix": "node linter --fix --verbose | snazzy",
+    "stylelint": "stylelint 'src/**/**.scss' --syntax scss",
+    "stylelint:fix": "stylelint 'src/**/**.scss' --syntax scss --fix",
     "test": "jest --config jest.conf.json -u"
   },
   "dependencies": {
@@ -86,12 +88,18 @@
     "jest": "^24.1.0",
     "jest-cli": "^24.1.0",
     "jest-enzyme": "^7.0.1",
+    "postcss": "^7.0.17",
     "postcss-inline-svg": "^3.0.0",
+    "prettier": "^1.18.2",
     "react-test-renderer": "^16.8.3",
     "redux-mock-store": "^1.5.1",
     "reload-html-webpack-plugin": "^0.1.2",
     "snazzy": "^8.0.0",
     "standard-engine": "^10.0.0",
+    "stylelint": "^10.1.0",
+    "stylelint-config-prettier": "^5.2.0",
+    "stylelint-config-standard": "^18.3.0",
+    "stylelint-scss": "^3.9.0",
     "webpack": "^4.29.6",
     "webpack-blocks": "^2.0.0-rc",
     "webpack-cli": "^3.2.3",
