--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend-skeleton",
-  "version": "4.0.0-beta",
+  "version": "3.0.0-beta",
   "description": "Yet another boilerplate created at first for using Angular/React in conjunction with Django.",
   "author": "DjangoStars <info@djangostars.com> (https://github.com/django-stars/)",
   "contributors": [
@@ -30,6 +30,7 @@
     "eslint:fix": "node linter --fix --verbose | snazzy",
     "stylelint": "stylelint 'src/**/**.scss' --syntax scss",
     "stylelint:fix": "stylelint 'src/**/**.scss' --syntax scss --fix",
+    "check_circular": "madge --circular src/app/index.js",
     "test": "jest --config jest.conf.json -u"
   },
   "dependencies": {
@@ -90,9 +91,8 @@
     "jest": "^24.1.0",
     "jest-cli": "^24.1.0",
     "jest-enzyme": "^7.0.1",
-    "postcss": "^7.0.17",
+    "madge": "^3.4.4",
     "postcss-inline-svg": "^3.0.0",
-    "prettier": "^1.18.2",
     "react-test-renderer": "^16.8.3",
     "redux-mock-store": "^1.5.1",
     "reload-html-webpack-plugin": "^0.1.2",
