--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,7 +1,6 @@
 {
   "extends": [
-    "stylelint-config-standard",
-    "stylelint-config-prettier"
+    "stylelint-config-standard"
   ],
   "fix": true,
   "formatter": "verbose",
@@ -9,10 +8,8 @@
     "stylelint-scss"
   ],
   "rules": {
-    "indentation": 2,
-    "selector-list-comma-newline-after": "never-multi-line",
-    "rule-empty-line-before": "always",
-    "at-rule-whitelist": ["include", "import", "keyframes", "mixin", "extend"],
+    "selector-list-comma-newline-after": "always",
+    "selector-type-case": "lower",
     "at-rule-no-unknown": null,
     "scss/at-rule-no-unknown": true,
     "declaration-empty-line-before": "never",
