--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "jest-enzyme": "^7.0.1",
     "madge": "^3.4.4",
     "postcss-inline-svg": "^3.0.0",
+    "prettier": "^1.18.2",
     "react-test-renderer": "^16.8.3",
     "redux-mock-store": "^1.5.1",
     "reload-html-webpack-plugin": "^0.1.2",
