--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,12 @@
 {
   'compact': false,
-  'presets': ['@babel/preset-env'],
+  'presets': [[
+    '@babel/preset-env', 
+    {
+      'useBuiltIns': 'usage',
+      'targets': '> 0.25%, last 2 versions, Firefox ESR, not dead'
+    }
+  ]],
   'plugins': [
     // stage 2
     ['@babel/plugin-proposal-decorators', { 'legacy': true }],
