--- a/.env.default
+++ b/.env.default
@@ -42,7 +42,11 @@ PROXY=["${API_URL}", "/static/", "/media/"]
 STORAGE_KEY=ds
 
 # what to store, set empty or null to store all state
-CACHE_STATE_KEYS=["resource.session"]
+CACHE_STATE_KEYS=["session.data"]
+# persisted store information after "Clear" action
+PERSIST_WHITE_LIST=[]
+# default limit for resources with pagination
+LIMIT=25
 
 #Sentry configs
 SENTRY_ORG=djangostars
