--- a/.env.default
+++ b/.env.default
@@ -44,7 +44,7 @@ STORAGE_KEY=ds
 # what to store, set empty or null to store all state
 CACHE_STATE_KEYS=["session.data"]
 # persisted store information after "Clear" action
-PERSIST_WHITE_LIST=[]
+CACHE_STATE_PERSIST_KEYS=[]
 # default limit for resources with pagination
 LIMIT=25
 
