--- a/package.json
+++ b/package.json
@@ -34,11 +34,15 @@
   },
   "dependencies": {
     "@sentry/browser": "^5.6.1",
-    "axios": "^0.19.0",
+    "abortcontroller-polyfill": "^1.3.0",
     "bootstrap": "^4.0.0",
     "core-decorators": "^0.20.0",
-    "djangostars": "https://github.com/django-stars/frontend-skeleton-contrib.git",
+    "ds-api": "https://github.com/django-stars/ds-frontend-api",
+    "ds-cache": "https://github.com/django-stars/ds-fe-cache",
+    "ds-resource": "https://github.com/django-stars/frontend-skeleton-contrib",
+    "ds-thunk": "https://github.com/django-stars/ds-thunk",
     "lodash": "^4.17.5",
+    "memoize-one": "^5.1.1",
     "prop-types": "^15.7.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
