--- a/package.json
+++ b/package.json
@@ -39,10 +39,9 @@
     "core-decorators": "^0.20.0",
     "ds-api": "https://github.com/django-stars/ds-frontend-api",
     "ds-cache": "https://github.com/django-stars/ds-fe-cache",
-    "ds-resource": "https://github.com/django-stars/frontend-skeleton-contrib",
-    "ds-thunk": "https://github.com/django-stars/ds-thunk",
+    "ds-redux-helpers": "https://github.com/django-stars/ds-redux-helpers",
+    "ds-resource": "https://github.com/django-stars/ds-frontend-resource",
     "lodash": "^4.17.5",
-    "memoize-one": "^5.1.1",
     "prop-types": "^15.7.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
