update path-to-regexp && bootstrap variables

--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "ds-redux-helpers": "https://github.com/django-stars/ds-redux-helpers",
     "ds-resource": "https://github.com/django-stars/ds-frontend-resource",
     "lodash": "^4.17.15",
-    "path-to-regexp": "^1.7.0",
+    "path-to-regexp": "^6.1.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -50,6 +50,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "redux-form": "^8.2.6",
     "redux-sentry-middleware": "^0.1.3",
     "reselect": "^4.0.0",
@@ -78,6 +79,7 @@
     "babel-loader": "^8.0.5",
     "babel-plugin-react-require": "^3.1.1",
     "clean-webpack-plugin": "^1.0.1",
+    "core-js": "2",
     "dotenv": "^6.0.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.10.0",
