FE: integrate with monorepo

--- a/package.json
+++ b/package.json
@@ -37,21 +37,17 @@
     "abortcontroller-polyfill": "^1.3.0",
     "bootstrap": "^4.0.0",
     "core-decorators": "^0.20.0",
-    "ds-api": "https://github.com/django-stars/ds-frontend-api",
-    "ds-cache": "https://github.com/django-stars/ds-fe-cache",
-    "ds-redux-helpers": "https://github.com/django-stars/ds-redux-helpers",
-    "ds-resource": "https://github.com/django-stars/ds-frontend-resource",
+    "ds-frontend": "https://github.com/django-stars/ds-frontend.git",
     "lodash": "^4.17.15",
     "path-to-regexp": "^6.1.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-redux": "^7.1.3",
+    "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
-    "redux-form": "^8.2.6",
     "redux-sentry-middleware": "^0.1.3",
     "reselect": "^4.0.0",
     "smoothscroll-polyfill": "^0.4.3",
