set APP_NAME from package.json, restore dotenv-expand

--- a/.env.default
+++ b/.env.default
@@ -24,7 +24,7 @@ OUTPUT_PATH=dist
 
 # pathname for assets used on client-side in CSS urls
 PUBLIC_PATH=/assets/
-PUBLIC_URL=${PUBLIC_PATH}
+PUBLIC_URL=$PUBLIC_PATH
 
 # authorization header name for JWT token
 AUTH_HEADER=Authorization
@@ -39,7 +39,7 @@ DEV_SERVER_HOST=127.0.0.1
 PROXY=["${API_URL}", "/static/", "/media/"]
 
 # key for store redux state in localStorage
-STORAGE_KEY=ds
+STORAGE_KEY=$APP_NAME
 
 # what to store, set empty or null to store all state
 CACHE_STATE_KEYS=["session.data"]
@@ -49,8 +49,8 @@ CACHE_STATE_PERSIST_KEYS=[]
 LIMIT=25
 
 #Sentry configs
-SENTRY_ORG=djangostars
-SENTRY_PROJECT=ds-app
+SENTRY_ORG=
+SENTRY_PROJECT=$APP_NAME
 SENTRY_AUTH_TOKEN=
 SENTRY_DSN=
 SENTRY_ENVIRONMENT=dev
