--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "clean-webpack-plugin": "^1.0.1",
     "core-js": "3",
     "dotenv": "^6.0.0",
+    "dotenv-expand": "^5.1.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.10.0",
     "enzyme-to-json": "^3.3.3",
