fix ds-frontend version

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "abortcontroller-polyfill": "^1.3.0",
     "bootstrap": "^4.0.0",
     "core-decorators": "^0.20.0",
-    "ds-frontend": "https://github.com/django-stars/ds-frontend.git",
+    "ds-frontend": "https://github.com/django-stars/ds-frontend.git#9dbaa21",
     "lodash": "^4.17.15",
     "path-to-regexp": "^6.1.0",
     "prop-types": "^15.7.2",
