Add ability to change mount point

--- a/.env.default
+++ b/.env.default
@@ -1,3 +1,7 @@
+# The base URL for all locations
+BASE_PATH=/
+BASE_URL=$BASE_PATH
+
 # the URL to backend part, without paths
 BACKEND_URL=http://localhost:8000
 
