--- a/.env.default
+++ b/.env.default
@@ -2,13 +2,19 @@
 BACKEND_URL=http://localhost:8000
 
 # where to proxy PROXY paths
-# (userful for not SPA, when you need to proxy API but get templates from local backend)
+# userful for not SPA, when you need to proxy API but get templates from local backend
 PROXY_URL=$BACKEND_URL
 
-# server side rendering
-# enable to proxy all requests to BACKEND_URL (except frontend assets)
-# userful for react SSR or MPA (multi-page applications)
-SSR=
+# disable for proxy all requests to BACKEND_URL (except frontend assets)
+# userful for non-SPA applications, CMS or MPA (multi-page applications)
+# to disable just remove the value, e.g `SPA=`
+SPA=
+
+# enable server side rendering
+# ssr bundle and server will be available in dist/ssr
+# to disable just remove the value, e.g `SSR=`
+# WARNING! This will not work for non-SPA applications.
+SSR=true
 
 # subdomain feature
 MAIN_HOST=localhost
