--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   "repository": "github:django-stars/frontend-skeleton",
   "scripts": {
     "start": "NODE_ENV=development webpack-dev-server --progress --colors --mode development",
+    "start:web": "SSR= NODE_ENV=development webpack-dev-server --progress --colors --mode development --config-name web",
     "build": "NODE_ENV=production webpack --mode production",
+    "ssr": "node src/ssr/index.js",
     "lint": "yarn run eslint && yarn run stylelint",
     "lint:fix": "yarn run eslint:fix && yarn run stylelint:fix",
     "eslint": "node linter --verbose | snazzy",
@@ -38,11 +40,14 @@
     "bootstrap": "^4.0.0",
     "core-decorators": "^0.20.0",
     "ds-frontend": "https://github.com/django-stars/ds-frontend.git#9dbaa21",
+    "express": "^4.17.1",
     "lodash": "^4.17.15",
+    "node-fetch": "^2.6.1",
     "path-to-regexp": "^6.1.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-helmet": "^6.1.0",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
@@ -50,7 +55,6 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-sentry-middleware": "^0.1.3",
     "reselect": "^4.0.0",
-    "smoothscroll-polyfill": "^0.4.3",
     "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
@@ -76,6 +80,7 @@
     "babel-plugin-react-require": "^3.1.1",
     "clean-webpack-plugin": "^3.0.0",
     "core-js": "3",
+    "decache": "^4.6.0",
     "dotenv": "^6.0.0",
     "dotenv-expand": "^5.1.0",
     "enzyme": "^3.3.0",
@@ -94,20 +99,19 @@
     "jest-cli": "^24.1.0",
     "jest-enzyme": "^7.0.1",
     "lint-staged": "^9.4.3",
+    "null-loader": "^4.0.1",
     "postcss-inline-svg": "^3.0.0",
     "react-hot-loader": "^4.12.19",
     "react-test-renderer": "^16.8.3",
     "redux-mock-store": "^1.5.1",
-    "reload-html-webpack-plugin": "^0.1.2",
     "snazzy": "^8.0.0",
     "standard-engine": "^10.0.0",
     "stylelint": "^10.1.0",
     "stylelint-config-standard": "^18.3.0",
     "stylelint-scss": "^3.9.0",
     "webpack": "^4.29.6",
-    "webpack-blocks": "^2.0.0-rc",
-    "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.2.1",
-    "write-file-webpack-plugin": "^4.5.0"
+    "webpack-blocks": "^2.1.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   }
 }
