--- a/.env.default
+++ b/.env.default
@@ -36,7 +36,7 @@ DEV_SERVER_PORT=3000
 DEV_SERVER_HOST=127.0.0.1
 
 # proxy paths for dev server ( note that API_URL will be added automatically to this array )
-PROXY=["${API_URL}", "/static/", "/media/"]
+PROXY=["${API_URL}", "/static/", "/media/", "/jsi18n/"]
 
 # key for store redux state in localStorage
 STORAGE_KEY=$APP_NAME
